[project]
name = "codespaces-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "contextvars>=2.4",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "loguru>=0.7.3",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
